--- a/nav.css
+++ b/nav.css
@@ -14,7 +14,7 @@ body, html{
   }
 
   .banner {
-    background-image: url(assets/img/nocolor.png);
+    background-image: url(assets/img/laptop.jpg);
     background-size: cover;
     background-position: center;
     height: 100%;
@@ -26,7 +26,7 @@ body, html{
     opacity: 0;
     transition: 1.5s ease;
 
-    background-image: url(assets/img/color.png);
+    background-image: url(assets/img/laptop.jpg);
     background-size: cover;
     background-position: center;
     height: 100%;
